# MLOps-labs

./: .gitignore  LICENSE  Makefile  README.md  dvc.yaml  models.dvc  params.yaml  pyproject.toml  server.py
.dvc/: config
config/: config.py  config.yaml  hydra.yaml
data/: raw.dvc
inference/: predictor.py
models/: RandomForest_model.joblib
outputs/2025-04-30/21-09-11/.hydra/: hydra.yaml
outputs/2025-04-30/21-19-55/.hydra/: hydra.yaml
outputs/2025-04-30/21-21-52/.hydra/: config.yaml  hydra.yaml
outputs/2025-04-30/21-23-14/.hydra/: hydra.yaml
outputs/2025-04-30/21-35-04/.hydra/: hydra.yaml
outputs/2025-04-30/21-37-12/.hydra/: hydra.yaml
outputs/2025-04-30/21-38-29/.hydra/: hydra.yaml
outputs/2025-04-30/21-39-48/.hydra/: hydra.yaml
outputs/2025-04-30/21-41-14/.hydra/: hydra.yaml
outputs/2025-04-30/21-46-03/.hydra/: hydra.yaml
outputs/2025-04-30/21-54-06/.hydra/: hydra.yaml
outputs/2025-04-30/21-56-16/.hydra/: hydra.yaml
outputs/2025-04-30/22-05-30/.hydra/: hydra.yaml
outputs/2025-04-30/22-09-36/.hydra/: hydra.yaml
outputs/2025-04-30/22-17-45/.hydra/: hydra.yaml
outputs/2025-04-30/22-19-29/.hydra/: hydra.yaml
outputs/2025-04-30/22-24-15/.hydra/: hydra.yaml
outputs/2025-04-30/22-25-30/.hydra/: hydra.yaml
outputs/2025-04-30/22-27-21/.hydra/: hydra.yaml
reports/: metrics.json
src/deployment/online/: api.py  requests.py
src/inference/: predictor.py
src/training/: data_loader.py  evaluate.py  preprocessor.py  train.py
src/utils/: mlflow_setup.py
training/: data_loader.py  evaluate.py  preprocessor.py  train.py
(+3 files in other folders)
